Update twitter and white space - fix broken loaders (#51)
* move plugins

* move twitter link and load mu-plugins

* only add br when twitter exists

--- a/sass/_what-we-do.scss
+++ b/sass/_what-we-do.scss
@@ -25,7 +25,8 @@
     &__link {
       color: $blue;
       text-decoration: none;
-      :hover {
+
+      &:hover {
         color: $gold;
       }
     }
